[package]
edition = "2021"
name = "processtime"
version = "0.2.0"
description = "A cross-platform version of the \"time\" shell function, to display execution time for a process."
homepage = "https://github.com/Orbitale/processtime"
documentation = "https://docs.rs/processtime"
readme = "README.md"
license = "LGPL-3.0-or-later"
repository = "https://github.com/Orbitale/processtime"
authors = ["Alex \"Pierstoval\" Rock <alex@orbitale.io>"]

[dependencies]
clap = { version = "4.1", features = ["cargo", "color", "suggestions", "wrap_help"] }
humantime = { version = "2.1", features = [ ] }

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/processtime", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/processtime/", "644"],
    ["README.md", "usr/share/doc/processtime/README", "644"],
]
extended-description = """\
processtime is a cross-platform version of the \"time\" shell function, to display execution time for a process.
Its main advancement is to add a "--format"
"""

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true # Optimize at the link stage with "Link Time Optimization"
codegen-units = 1 # Slower compilation, but more optimization
